# httPWM

./: .gitignore  .gitmodules  400.html  Cargo.toml  README.md  build-esp32.sh  build.rs  disable-leds.sh  flash-esp32-c3.sh  http-light.service  httpwmd.service  sdkconfig.defaults  sync.sh
resources/: circuit.cddx
src/: lib.rs  main.rs  scheduler.rs
src/lib/: scheduler.rs
web/public/: index.html  script.js  style.css
