[package]
name = "httpwm"
version = "0.1.1"
authors = ["Icelk <main@icelk.dev>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "httpwmd"
path = "src/bin/main.rs"
doc = true
required-features = ["bin"]

[lib]
name = "httpwm"

[dependencies]
rppal = "^0.13"
ron = "^0.8"
kvarn = { version = "^0.5", default-features = false, optional = true }
time = { version = "0.3.7", features = ["parsing", "formatting", "macros"] }
serde = { version = "^1", optional = true, features = ["derive"] }
serde_json = { version = "^1", optional = true }
percent-encoding = { version = "^2", optional = true }
tokio = { version = "^1", optional = true, features = ["macros"] }
time-tz = { version = "1.0.2", features = ["system"] }
lazy_static = "1.4.0"
libc = { version = "0.2.134", optional = true }

[features]
default = ["bin"]
bin = ["web", "libc"]

web = ["kvarn", "tokio", "json", "percent-encoding"]
json = ["serde", "serde_json"]
test = []
