[package]
name = "httpwm"
version = "0.1.1"
authors = ["Icelk <main@icelk.dev>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "httpwmd"
path = "src/bin/main.rs"
doc = true
required-features = ["bin"]

[lib]
name = "httpwm"

[dependencies]
rppal = "^0.13"
ron = "^0.8"
kvarn = { version = "^0.5", default-features = false, optional = true }
time = { version = "0.3.7", features = ["parsing", "formatting", "macros"] }
serde = { version = "^1", optional = true, features = ["derive"] }
serde_json = { version = "^1", optional = true }
percent-encoding = { version = "^2", optional = true }
tokio = { version = "^1", optional = true, features = ["macros"] }
time-tz = { version = "1.0.2", features = ["system"], optional = true }
lazy_static = "1.4.0"
libc = { version = "0.2.134", optional = true }

[features]
default = ["bin", "auto-tz"]
bin = ["web"]

# get timezone from system
# brings in lots of dependencies and doesn't work on embedded
# if this isn't enabled, set the `TIMEZONE` environment variable to e.g. `+02:00` to set the timezone.
auto-tz = ["time-tz"]
web = ["kvarn", "tokio", "json", "percent-encoding"]
json = ["serde", "serde_json"]
test = ["libc"]

[profile.distribution]
inherits = "release"
opt-level = "z"
lto = true
strip = true
